RocketShip Changelog

03-11-2015 #2

    - Primitive Object Types BETA 4
    - Added ArrayAccess interface implementation to Collection (now object can be used with the standard array syntax)
    - Added Countable interface implementation to Collection (now you can also get count by using the standard count php method)
    - Added JsonSerializable interface implementation to Collection (now can easily be encoded to json without any change to your code)
    - Refactored 'count' method to 'length' in Collection
    - Added Authentication class (supporting authentication, creation, permission level checking)
    - Added missing init call to model construct method (method is required but was never called)

03-11-2015

    - Primitive Object Types BETA 3
    - Fixed issue with rendering to JSON with Primitive Objects, now down casts everything back to php native
    - Changed processing order for toRaw (numeric before string)
    - Fixed limit method to downcast Primitive Objects
    - Fixed potential issue with the MongoId casting in when updating a record
    - Added 'en' as default locale in Application for when potential "empty property" error comes up

03-10-2015

    - Primitive Object Types BETA 2
    - Fixed HTML Helper bugs related to bugs with the Primitive Objects
    - Fixed bug with site_url in app that was not set correctly
    - Updated ODM to take advantage of the Primitive Object Types in better way
    - Fixed a bug with cookies in CLI mode (fixing the CLI at the same time)
    - Added 'toRaw' and 'toPrimitive' static methods in Base class

03-08-2015

    - Added Primitive Object Types (String, Number, Collection) -- BETA
    - Updated the system to use new Primitive Object Types
    - Upgrade version to 1.1.0

03-02-2015

    - Added support for dash (-) in (:string) url segments
    - Updated documentation for routes

02-28-2015

    - Added RegexpBuilder to composer for easy Regex programming
    - Fixed 404 Error handling